# autocore-web

./: .env  .env.desktop.example  .env.local  .env.local.example  .env.vercel.example  .firebaserc  .gitignore  README.md  firebase.json  firestore.indexes.json  firestore.rules  next.config.ts  package-lock.json  package.json  skills-lock.json  tsconfig.json  vercel.json
.github/workflows/: ci.yml
assets/: README.md
autocore-mobile/: README.md  app.json  package-lock.json  package.json  tailwind.config.js
autocore-mobile/animations/: presets.ts
autocore-mobile/app/: +not-found.tsx  _layout.tsx  design-system.tsx  modal.tsx
autocore-mobile/constants/: index.ts
docs/: NATIVE-WEB-DIFF.md  performance-checklist.md
scripts/: backfill-billing-subscriptions.ts  build-documents-css.mjs  capture-apple-auth-code.mjs  copy-tauri-downloads.mjs  deploy-billing-functions.sh  dev-desktop.mjs  ensure-puppeteer-browser.mjs  exchange-real-apple-code.mjs  forensic-apple-oauth.mjs  generate-document-templates.mjs  generate-favicon-ico.py  migrate-rbac.ts  seed-demo-account.ts  send-test-verification-email.ts  setup-apple-domain-association.mjs  setup-stripe-firebase-secret.sh  sync-brand-assets-from-native.sh  sync-tauri-app-url.mjs  validate-apple-client-secret.mjs
src/: middleware.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  desktop-app-url.txt  tauri.conf.json
src-tauri/capabilities/: default.json  macos-siwa.json  remote-macos-siwa.json  remote.json
src-tauri/icons/: icon.icns
src-tauri/resources/next-server/: server.js
src-tauri/src/: lib.rs
(+1270 files in other folders)
